<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.aruana.bankinformation.ui.bank.BankFragment"
        android:label="@string/title_bank_fragment"
        tools:layout="@layout/fragment_bank" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.aruana.bankinformation.ui.biciban.BicIbanFragment"
        android:label="@string/title_bic_iban_fragment"
        tools:layout="@layout/fragment_biciban" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.aruana.bankinformation.ui.postcode.PostCodeFragment"
        android:label="@string/title_post_code"
        tools:layout="@layout/fragment_postcode" />
</navigation>