<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.aruana.bankinformation.ui.biciban.BicIbanViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextBic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/bic"
                    android:maxLength="11"
                    android:singleLine="true" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:onClick="@{() -> viewModel.validateBic(editTextBic.getText().toString())}"
                    android:text="@string/validate" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextIban"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/iban"
                    android:inputType="textCapSentences"
                    android:maxLength="27"
                    android:singleLine="true" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:onClick="@{() -> viewModel.validateIban(editTextIban.getText().toString())}"
                    android:text="@string/validate" />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:visibility="invisible" />
    </FrameLayout>
</layout>